--- a/index.html
+++ b/index.html
@@ -598,7 +598,107 @@
       "question": "Which of the following enzymes is used to join two pieces of DNA together?",
       "options": ["Ligase", "Helicase", "Polymerase", "Endonuclease"],
       "answer": 0
-    }
+    },
+    {
+    "question": "What is the primary function of CRISPR technology in genetic modification?",
+    "options": ["Gene editing", "Protein synthesis", "DNA replication", "Cell division"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is a common application of biotechnology in agriculture?",
+    "options": ["Genetically modified crops", "Soil fertilization", "Pest control with chemicals", "Crop rotation"],
+    "answer": 0
+},
+{
+    "question": "What is the name of the process used to clone DNA in biotechnology?",
+    "options": ["Polymerase chain reaction (PCR)", "Electrophoresis", "Gel filtration", "Fermentation"],
+    "answer": 0
+},
+{
+    "question": "Which biotechnology product is used to treat diabetes?",
+    "options": ["Insulin", "Vaccines", "Antibiotics", "Enzymes"],
+    "answer": 0
+},
+{
+    "question": "What type of cells are used to produce monoclonal antibodies?",
+    "options": ["Hybridoma cells", "Stem cells", "T-cells", "B-cells"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is an example of a genetically modified organism (GMO)?",
+    "options": ["Bt cotton", "Soybean oil", "Orange juice", "Honey"],
+    "answer": 0
+},
+{
+    "question": "What is the function of a plasmid in genetic engineering?",
+    "options": ["To transfer genetic material", "To synthesize proteins", "To replicate DNA", "To form the cell wall"],
+    "answer": 0
+},
+{
+    "question": "Which process is used to create genetically modified organisms?",
+    "options": ["Gene transfer", "Fermentation", "DNA replication", "Cell division"],
+    "answer": 0
+},
+{
+    "question": "What is the role of recombinant DNA technology in biotechnology?",
+    "options": ["To combine genes from different species", "To prevent gene expression", "To mutate genes", "To extract proteins"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is used to produce biofuels in biotechnology?",
+    "options": ["Microorganisms", "Plants", "Animals", "Minerals"],
+    "answer": 0
+},
+{
+    "question": "What is the term for the technique used to insert foreign DNA into an organism’s genome?",
+    "options": ["Transformation", "Transfection", "Cloning", "Culturing"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is a key component in the production of genetically modified bacteria?",
+    "options": ["Recombinant plasmids", "Mitochondria", "Golgi apparatus", "Nucleotides"],
+    "answer": 0
+},
+{
+    "question": "What is the purpose of a bioreactor in biotechnology?",
+    "options": ["To grow microorganisms or cells for production", "To purify DNA", "To isolate proteins", "To test samples"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is a common method used in gene therapy?",
+    "options": ["Viral vectors", "Electroporation", "Gel electrophoresis", "Spectroscopy"],
+    "answer": 0
+},
+{
+    "question": "What is one of the major concerns about genetically modified organisms (GMOs)?",
+    "options": ["Environmental impact", "Taste enhancement", "Increased productivity", "Lower costs"],
+    "answer": 0
+},
+{
+    "question": "What is the source of the enzyme used in PCR (Polymerase Chain Reaction)?",
+    "options": ["Thermophilic bacteria", "Human cells", "Yeast", "Plants"],
+    "answer": 0
+},
+{
+    "question": "Which of the following biotechnological products is used to prevent infections?",
+    "options": ["Vaccines", "Vitamins", "Antibiotics", "Hormones"],
+    "answer": 0
+},
+{
+    "question": "What is the role of restriction enzymes in molecular biology?",
+    "options": ["Cut DNA at specific sequences", "Replicate DNA", "Synthesize RNA", "Bind to proteins"],
+    "answer": 0
+},
+{
+    "question": "What is a common application of biotechnology in the food industry?",
+    "options": ["Fermentation", "Genetic engineering", "Cryopreservation", "Protein synthesis"],
+    "answer": 0
+},
+{
+    "question": "Which of the following is a method used for DNA sequencing in biotechnology?",
+    "options": ["Sanger sequencing", "PCR", "Western blotting", "Cell culture"],
+    "answer": 0
+}
 ]
 
 };
